json-hashed ver

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <a href="/">ホーム</a>
+        <a href="/home">ホーム</a>
         <a href="/login">ログイン</a>
         <a href="/register">登録</a>
     </nav>
