--- a/templates/login.html
+++ b/templates/login.html
@@ -1,14 +1,13 @@
 {% extends 'base.html' %}
-
 {% block content %}
 <h2>ログイン</h2>
-<form action="/login" method="POST">
-    <label for="username">ユーザー名</label>
-    <input type="text" name="username" required>
+<form method="POST" action="/login">
+    <label>ユーザー名:</label><br>
+    <input type="text" name="username"><br><br>
     
-    <label for="password">パスワード</label>
-    <input type="password" name="password" required>
+    <label>パスワード:</label><br>
+    <input type="password" name="password"><br><br>
     
-    <button type="submit">ログイン</button>
+    <input type="submit" value="ログイン">
 </form>
 {% endblock %}
